--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -10,7 +10,14 @@
         overflow: hidden;
         background-color: var(--main-color);
     }
-    .input {
-        width: 90%;
+    .button-container {
+        position: absolute;
+        bottom: 2rem;
+        left: 50%;
+        transform: translate(-50%, 0);
     }
+}
+::ng-deep .mat-mdc-form-field {
+    color: warn;
+    // color: var(--main-color-light);
 }
