--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -6,14 +6,40 @@
                 border-radius: .8rem;
                 background-color: var(--main-color-light);
                 .bg {
+                    background-repeat: no-repeat !important;
+                    background-size: cover !important;
                     .blur { 
                         background: rgba(151, 151, 151, 0.1); // Make sure this color has an opacity of less than 1
                         backdrop-filter: blur(4px); // This be the blur
                     }
-                    
                 }
                 .pic {
+                    width: 15% !important;
+                    min-width: 15%;
                     background-color: var(--main-color-dark);
+                    img {
+                        margin: auto;
+                        background-size: cover;
+                        object-fit: cover;
+                        height: 100% !important;
+                        width: 100% !important;
+                    }
+                }
+                .text {
+                    width: 85% !important;
+                    max-width: 85%;
+                    display: inline-block;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    span {
+                        width: 85% !important;
+                        text-shadow: 
+                        -6px -6px 15px rgba(0, 0, 0, 1),
+                        -6px 6px 15px rgba(0, 0, 0, 1),
+                        6px -6px 15px rgba(0, 0, 0, 1),
+                        6px 6px 15px rgba(0, 0, 0, 1);
+                        text-overflow: ellipsis;
+                    }
                 }
             }
         }
