--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -1,1 +1,62 @@
-<p>portfolio works!</p>
+<div class="container sm:col-11 md:col-11 lg:col-10 xl:col-9 mx-auto py-2 my-2 xl:my-4 px-2">
+    <div>
+
+        <div class="flex">
+            <div class="w-8 mr-2">
+                <div class="flex justify-content-between">
+                    <h1 class="text-transform: uppercase text-center text-xl lg:text-4xl">{{portfolio?.name}}</h1>
+                    <div *ngIf="portfolio">
+                        <span *ngIf="portfolio?.user_id == author?.user_id">
+                            <span class="cursor-pointer underline" (click)="editPortfolio(portfolio.portfolio_id)"
+                            >Редактировать</span> | 
+                            <span class="cursor-pointer underline" (click)="deletePortfolio(portfolio.portfolio_id)"
+                            >Удалить</span>
+                        </span>
+                    </div>
+                </div>
+                <div class="flex justify-content-start mb-6">
+                    <h1 class="text-transform: uppercase text-center text-md lg:text-xl">{{author?.full_name}}</h1>
+                </div>
+                <div class="mb-3">
+                    <span class="input w-full"></span>
+                </div>
+                <div class="mb-3">
+                    <h2 class="text-transform: uppercase mb-1">Описание</h2>
+                    <span class="input w-full">{{portfolio?.description}}</span>
+                </div>
+                <div class="flex justify-content-end mb-3">
+                    <span *ngIf="portfolio?.creation_date" class="input">Создано: {{portfolio?.creation_date | date:"dd.MM.y"}}</span>
+                </div>
+            </div>
+            <div class="w-4 ml-2">
+                <div #mainPic class="title-pic-container" [style.height.px]="mainPic.offsetWidth">
+                    <img [src]="'https://Project.pavielurakov1.repl.co/image.php?folder=titles&id=' + portfolio?.title_image" class="title-pic p-0">
+                </div>
+            </div>
+        </div>
+        <mat-divider class="my-6"></mat-divider>
+        <div class="">
+            <div #content class="grid">
+                <div #picContainer *ngFor="let pic of pics" class="col-3"  [style.height.px]="picContainer.offsetWidth">
+                    <img [src]="'https://Project.pavielurakov1.repl.co/image.php?folder=images&id=' + pic.image" class="pic h-full w-full p-0">
+                    <!-- <div class="pic bg-orange-500 h-full w-full"></div> -->
+                </div>
+            </div>
+        </div>
+        <mat-divider class="my-6"></mat-divider>
+        <div *ngIf="comments?.length" class="comments">
+            <h2 class="text-xl lg:text-4xl" style="margin-bottom: 0.2rem;">Все комментарии</h2>
+            <mat-divider></mat-divider>
+            <div class="commnets-container sm:col-11 md:col-11 lg:col-10 xl:col-10 mx-auto px-2">
+                <div *ngFor="let comment of comments">
+                    <div class="comment">
+                        <span>{{comment.creator_name}}</span><br>  
+                        <div class="comment-text">
+                            {{comment.text}}
+                        </div> 
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
