--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,4 +1,10 @@
 <div class="main-container sm:col-11 md:col-11 lg:col-10 xl:col-9 mx-auto py-2 my-2 xl:my-4 px-2">
+    <div class="search mb-2 xl:mb-3">
+        <div class="bar flex align-content-center">
+            <input #search class="input flex-grow-1" type="search" (search)="searchPortfolio(search.value)" placeholder="Поиск">
+            <button (click)="searchPortfolio(search.value)" class="icon-btn ml-1" color="primary"><mat-icon>search</mat-icon></button>
+        </div>
+    </div>
     <div class="portfolios">
         <div class="portfolio h-6rem lg:h-8rem  mb-2 xl:mb-3 flex" *ngFor="let portfolio of portfolios">
             <div class="bg flex-grow-1 w-full h-full" [ngStyle]="{background: 'url(https://Project.pavielurakov1.repl.co/image.php?folder=titles&id=' + portfolio.title_image +')'}">
