--- a/src/app/pages/portfolio/portfolio.component.scss
+++ b/src/app/pages/portfolio/portfolio.component.scss
@@ -8,4 +8,53 @@
             height: 100%;
         }
     }
+    img.pic {
+        margin: auto;
+        background-size: cover;
+        object-fit: cover;
+    }
+
+    img {
+        transition: transform .2s;
+        &:hover {
+            transform: scale(1.5);
+        }
+    }
+
+    .add-comment {
+        margin: 3rem 0;
+        .text {
+            background-color: var(--main-color-light);
+            font-size: 1rem;
+            border: none !important;
+            border-radius: 8px;
+            width: 100%;
+            padding: 1rem;
+            margin-bottom: 1rem;
+            min-height: 8rem;
+            resize: none;
+            &:focus-visible {
+                outline: none !important;
+            }
+        }
+        .button-container {
+            display: flex;
+            justify-content: end;
+        }
+    }
+    .comments {
+        .commnets-container {
+            .comment {
+                margin-top: 2rem;
+                margin-bottom: 2rem;
+                .comment-text {
+                    margin-top: 0.2rem;
+                    background-color: var(--main-color-light);
+                    border-radius: 8px;
+                    padding: 1rem;
+                    overflow-wrap: break-word;
+                }
+            }
+        }
+    }
 }
